--- a/NativeDump/NativeDump.csproj
+++ b/NativeDump/NativeDump.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
+    <Compile Include="Overwrite.cs" />
     <Compile Include="CreateFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Win32.cs" />
