--- a/NativeDump/NativeDump.csproj
+++ b/NativeDump/NativeDump.csproj
@@ -67,10 +67,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NT.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="CreateFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Win32.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
