add compilation time string obfuscation

--- a/Decoder/Decoder.vcxproj
+++ b/Decoder/Decoder.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Decoder.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="obfuscate.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
